--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name" translatable="false">AndroidLabs</string>
     <string name="hello_world">Hello World</string>
     <string name="button_text">"I\'m a button!"</string>
+    <string name="textview">I love Android</string>
+    <string name="switch1">switch on/off</string>
+    <string name="flag">flag</string>
+    <string name="off">OFF</string>
+    <string name="on">ON</string>
+    <string name="buttom">Press Me</string>
+    <string name="checkbox">Check this out</string>
+    <string name="text">I love Android</string>
+    <string name="toastmassage">Label has been updated</string>
+    <string name="snackbarmassage">The checkbox is now</string>
+    <string name="offon">undo</string>
 </resources>
