--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name" translatable="false">AndroidLabs</string>
     <string name="hello_world">Hello World</string>
     <string name="button_text">"I\'m a button!"</string>
-    <string name="textview">I love Android</string>
+
     <string name="switch1">switch on/off</string>
     <string name="flag">flag</string>
     <string name="off">OFF</string>
@@ -13,4 +13,11 @@
     <string name="toastmassage">Label has been updated</string>
     <string name="snackbarmassage">The checkbox is now</string>
     <string name="offon">undo</string>
+
+    <string name="nameview">Enter your name</string>
+    <string name="buttontext">Next</string>
+    <string name="textview">Welcome!</string>
+    <string name="buttoncall" >DONT CALL ME THAT</string>
+    <string name="buttonthank">THANK YOU</string>
+    <string name="nametext">Name</string>
 </resources>
