--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -2,23 +2,15 @@
 <resources>
     <string name="hello_world">Bonjour le monde</string>
     <string name="button_text">Je suis un bouton</string>
-    <string name="toastmassage">L’étiquette a été mise à jour</string>
-
-    <string name="text">J’adore Android</string>
-    <string name="buttom">Appuyez-moi</string>
-    <string name="checkbox">Regarde ça</string>
-    <string name="switch1">allumer/éteindre</string>
-    <string name="snackbarmassage">La case à cocher est maintenant</string>
-    <string name="offon">défaire</string>
-    <string name="flag">flag</string>
-    <string name="off">OFF</string>
-    <string name="on">ON</string>
 
 
-    <string name="nameview">Entrez votre nom</string>
-    <string name="buttontext">prochain</string>
-    <string name="textview">Bienvenue!</string>
-    <string name="buttoncall">NE M’APPELEZ PAS COMME ÇA</string>
-    <string name="buttonthank">MERCI</string>
-    <string name="nametext">Nom</string>
+
+
+
+
+    <string name="listview">La vue liste</string>
+    <string name="edittext">écrivez ici</string>
+    <string name="toggle">basculer</string>
+    <string name="myButton">ajouter</string>
+    <string name="textHere">""</string>
 </resources>
