--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">AndroidLabs</string>
+    <string name="app_name" translatable="false">CST2335 Lab5</string>
     <string name="header" translatable="false">CST2335 Lab4</string>
-    <string name="hello_world">Hello World</string>
-    <string name="button_text">"I\'m a button!"</string>
-
-
-
-
     <string name="listview">the list view</string>
     <string name="edittext">Type here</string>
     <string name="toggle">Urgent</string>
