--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">CST2335 Lab5</string>
-    <string name="header" translatable="false">CST2335 Lab4</string>
     <string name="listview">the list view</string>
     <string name="edittext">Type here</string>
     <string name="toggle">Urgent</string>
     <string name="myButton">ADD</string>
     <string name="textHere">""</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
 
 
 </resources>
