--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">CST2335 Lab5</string>
+    <string name="app_name" translatable="false">CST2335 Lab_8</string>
     <string name="listview">La vue liste</string>
     <string name="edittext">écrivez ici</string>
     <string name="toggle">basculer</string>
     <string name="myButton">ajouter</string>
     <string name="textHere">""</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txt_dad_joke">A dad joke is a short joke, typically a pun, presented as a one-liner or a question and answer, but not a narrative.Generally inoffensive, dad jokes are stereotypically told with sincere humorous intent,
+        or to intentionally provoke a negative reaction to their overly-simplistic humor.</string>
+    <string name="txt_main_activity">Main Activity</string>
+
+    <string name="nav_open">NAV OPEN</string>
+    <string name="nav_close">NAV CLOSE</string>
 </resources>
