--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">CST2335 Lab5</string>
+    <string name="app_name" translatable="false">CST2335 Lab_8</string>
     <string name="listview">the list view</string>
     <string name="edittext">Type here</string>
     <string name="toggle">Urgent</string>
@@ -10,5 +10,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- TODO: Remove or change this placeholder text -->
 
+    <string name="txt_dad_joke">A dad joke is a short joke, typically a pun, presented as a one-liner or a question and answer, but not a narrative.Generally inoffensive, dad jokes are stereotypically told with sincere humorous intent,
+        or to intentionally provoke a negative reaction to their overly-simplistic humor.</string>
+    <string name="txt_main_activity">Main Activity</string>
 
+    <string name="nav_open">NAV OPEN</string>
+    <string name="nav_close">NAV CLOSE</string>
 </resources>
